# LCD

./: APDU(Copy).html  CMakeLists.txt  Index.html  LCD.html  LCDL.md  SYSTEM.md  SYSTEM_REDESIGN.md  VERIFICACION_SYSTEM_REDESIGN.md  app.js  counter_app.lcdl  index.html  main.cpp  run_learning_tests.js  stress_test.html  terminal_counter.md  tests_endurance_lcdl.js  tests_intensive_lcdl.js  tests_stress_lcdl.js  tests_visual_headless.js  tools_backup_restore.js  tools_jobs.js  visual_test.html
ComplexTest/: complex_vm_suite.js  encoding_suite.js  mega_program.lcdl  run_all_complex.sh  test_mega_program.js
learning/: 01_basico.lcdl  02_control_flujo.lcdl  03_archivos_y_arrays.lcdl
